# osutils

./: .gitignore  CMakeLists.txt  OSUtils.h  OSUtilsBase.cpp  OSUtilsBase.h
macutils/: AppKit.h  AppKitImpl.h  MacUtils.cpp  MacUtils.h
nixutils/: NixUtils.cpp  NixUtils.h  X11Funcs.cpp  X11Funcs.h  keysymmap.py
winutils/: WinUtils.cpp  WinUtils.h
